--- a/LabBook-dois.org
+++ b/LabBook-dois.org
@@ -2038,12 +2038,56 @@ head(resultFrame)
 - Instalando Extrae para realizar novos experimentos.
 
 #+begin_src sh :results output :exports both
+
+
+#variaveis auxiliares
+pathOfDownload=/home/gabrielbmoro/Downloads/
 pathOfInstallation=/home/gabrielbmoro/Programas/
 
-cd $pathOfInstallation
-#wget https://ftp.tools.bsc.es/tracking/tracking-2.6.5-linux_x86_64.tar.gz
+#instalando o pré-requisitos
 
-#tar xvf tracking-2.6.5-linux-x86-64
+cd $pathOfDownload
+
+wget http://xmlsoft.org/sources/old/libxml2-2.6.30.tar.gz
+
+wget http://download.savannah.nongnu.org/releases/libunwind/libunwind-1.2.tar.gz
+tar vxf libunwind-1.2.tar.gz
+./libunwind-1.2/configure
+cd libunwind-1.2/configure/
+make
+sudo make install
+rm -rf *libunwind-1.2*
+
+cd $pathOfDownload
+
+wget http://icl.utk.edu/projects/papi/downloads/papi-5.5.1.tar.gz
+tar vxf papi-5.5.1.tar.gz
+./papi-5.5.1/src/configure
+cd papi-5.5.1/src/
+make
+sudo make install
+rm -rf *papi-5.5.1*
+
+#instalação do extrae
+
+cd $pathOfInstallation
+wget https://ftp.tools.bsc.es/extrae/extrae-3.4.3-src.tar.bz2
+tar xvjf extrae-3.4.3-src.tar.bz2
+rm -rf *.bz2
+PREFIX=/home/gabrielbmoro/Programas/extrae-3.4.3/
+ ./configure --prefix=$PREFIX --enable-openmp --without-mpi \ 
+--with-libunwind=/usr/local/lib \ 
+--with-libunwind-headers=/usr/local/include \ 
+--without-unwind \ 
+--without-dwarf \ 
+--without-dyninst \  
+--without-elf \ 
+--with-papi-headers=/usr/local/include \ 
+--with-papi-libs=/usr/local/lib \ 
+--with-papi=/usr/local/bin  \ 
+--without-binutils \ 
+
+#ls
 
 #mv tracking-2.6.5-linux-x86-64 extrae
 
@@ -2051,36 +2095,33 @@ cd $pathOfInstallation
 
 #sed -i '1iexport EXTRAE_HOME='"$pathOfInstallation"'extrae' ~/.
 
-cd extrae/etc
-
-sudo ./configured.sh
 #+end_src
 
 #+RESULTS:
 #+begin_example
-EXTRAE_HOME points to /home/gabrielbmoro/Programas/extrae and the directory exists .. OK
-Loaded specs for Extrae from /home/gabrielbmoro/Programas/extrae/etc/extrae-vars.sh
-
-Extrae was configured with:
-$ ../configure --prefix=/apps/BSCTOOLS/extrae/3.4.3/openmpi+libgomp4.9 --enable-posix-clock --with-mpi=/apps/OPENMPI/1.8.1-mellanox --with-load-balancing=/apps/PM/dlb/latest/openmpi --with-papi=/apps/BSCTOOLS/deps/papi/5.5.1 --with-dyninst=/apps/BSCTOOLS/deps/dyninst/9.3.0 --with-dwarf=/apps/BSCTOOLS/deps/libdwarf/20160613 --with-elf=/apps/BSCTOOLS/deps/libelf/0.148 --with-unwind=/apps/BSCTOOLS/deps/libunwind/1.2-rc1 --with-boost=/apps/BSCTOOLS/deps/boost/1.61.0 --with-binutils=/apps/BSCTOOLS/deps/binutils/2.24 --with-xml-prefix=/apps/BSCTOOLS/deps/libxml/2.9.4 --enable-online --with-synapse=/apps/BSCTOOLS/synapse/2.0.0 --with-spectral=/apps/BSCTOOLS/spectral/3.4.0 --with-clustering=/apps/BSCTOOLS/clusteringsuite/2.6.6 --enable-sampling
-
-CC was gcc
-CFLAGS was -g -O2 -fno-optimize-sibling-calls -Wall -W
-CXX was g++
-CXXFLAGS was -g -O2 -fno-optimize-sibling-calls -Wall -W
-
-MPI_HOME points to /apps/OPENMPI/1.8.1-mellanox and the directory does NOT exist .. FAILED
-LIBXML2_HOME points to /apps/BSCTOOLS/deps/libxml/2.9.4 and the directory does NOT exist .. FAILED
-PAPI_HOME points to /apps/BSCTOOLS/deps/papi/5.5.1 and the directory does NOT exist .. FAILED
-DYNINST_HOME points to /apps/BSCTOOLS/deps/dyninst/9.3.0 and the directory does NOT exist .. FAILED
-DWARF_HOME points to /apps/BSCTOOLS/deps/libdwarf/20160613 and the directory does NOT exist .. FAILED
-UNWIND_HOME points to /apps/BSCTOOLS/deps/libunwind/1.2-rc1 and the directory does NOT exist .. FAILED
-LIBERTY_HOME points to /apps/BSCTOOLS/deps/binutils/2.24 and the directory does NOT exist .. FAILED
-BFD_HOME points to /apps/BSCTOOLS/deps/binutils/2.24 and the directory does NOT exist .. FAILED
-
-IO instrumentation is: ENABLED
-Dynamic memory instrumentation is: ENABLED
-
-Please, report bugs to tools@bsc.es
-
+AUTHORS
+bootstrap
+bootstrap-and-dist
+ChangeLog
+config
+configure.ac
+COPYING
+doc
+etc
+example
+include
+INSTALL
+INSTALL-examples
+Makefile.am
+manuals
+NEWS
+PATHS
+README
+RELEASE-PROCEDURE
+scripts
+src
+substitute
+substitute-all
+tests
+TODO
 #+end_example
