--- a/LabBook-dois.org
+++ b/LabBook-dois.org
@@ -2041,19 +2041,17 @@ head(resultFrame)
 
 
 #variaveis auxiliares
-pathOfDownload=/home/gabrielbmoro/Downloads/
-pathOfInstallation=/home/gabrielbmoro/Programas/
+pathOfDownload=/home/gabriel-moro/Downloads/
+pathOfInstallation=/home/gabriel-moro/Programas/
 
 #instalando o pré-requisitos
 
 cd $pathOfDownload
 
-wget http://xmlsoft.org/sources/old/libxml2-2.6.30.tar.gz
-
 wget http://download.savannah.nongnu.org/releases/libunwind/libunwind-1.2.tar.gz
 tar vxf libunwind-1.2.tar.gz
 ./libunwind-1.2/configure
-cd libunwind-1.2/configure/
+cd libunwind-1.2
 make
 sudo make install
 rm -rf *libunwind-1.2*
@@ -2075,53 +2073,17 @@ wget https://ftp.tools.bsc.es/extrae/extrae-3.4.3-src.tar.bz2
 tar xvjf extrae-3.4.3-src.tar.bz2
 rm -rf *.bz2
 PREFIX=/home/gabrielbmoro/Programas/extrae-3.4.3/
- ./configure --prefix=$PREFIX --enable-openmp --without-mpi \ 
---with-libunwind=/usr/local/lib \ 
---with-libunwind-headers=/usr/local/include \ 
---without-unwind \ 
---without-dwarf \ 
---without-dyninst \  
---without-elf \ 
---with-papi-headers=/usr/local/include \ 
---with-papi-libs=/usr/local/lib \ 
---with-papi=/usr/local/bin  \ 
---without-binutils \ 
 
-#ls
-
-#mv tracking-2.6.5-linux-x86-64 extrae
-
-#rm -rf *.tar.gz
-
-#sed -i '1iexport EXTRAE_HOME='"$pathOfInstallation"'extrae' ~/.
+ ./configure --prefix=$PREFIX --enable-openmp --without-mpi \
+--with-libunwind=/usr/local/lib \
+--with-libunwind-headers=/usr/local/include \
+--without-unwind \
+--without-dwarf \
+--without-dyninst \
+--without-elf \
+--with-papi-headers=/usr/local/include \
+--with-papi-libs=/usr/local/lib \
+--with-papi=/usr/local/bin \
+--without-binutils \
 
 #+end_src
-
-#+RESULTS:
-#+begin_example
-AUTHORS
-bootstrap
-bootstrap-and-dist
-ChangeLog
-config
-configure.ac
-COPYING
-doc
-etc
-example
-include
-INSTALL
-INSTALL-examples
-Makefile.am
-manuals
-NEWS
-PATHS
-README
-RELEASE-PROCEDURE
-scripts
-src
-substitute
-substitute-all
-tests
-TODO
-#+end_example
