--- a/LabBook-dois.org
+++ b/LabBook-dois.org
@@ -2165,3 +2165,81 @@ source ${EXTRAE_HOME}/etc/extrae.sh
 
 export LD_PRELOAD=${EXTRAE_HOME}/lib/libomptrace #como usamos openmp
 #+end_src
+
+- Estou lendo a documentação, nunca tinha utilizado o Extrae antes,
+  mas a princípio, a ferramenta utiliza uma variável de ambiente
+  chamada =EXTRAE_CONFIG_FILE=. Acredito que a partir dela seja possível
+  especificar um arquivo xml, com as configurações da instrumentação,
+  como o exemplo encontrado em:
+
+#+begin_src sh :session foo :results output :exports both 
+cd $HOME/Programas/extrae-3.4.3/example/LINUX/OMP/
+cat extrae.xml
+#+end_src
+
+#+RESULTS:
+#+begin_example
+
+<?xml version='1.0'?>
+
+<trace enabled="yes"
+ home="@sub_PREFIXDIR@"
+ initial-mode="detail"
+ type="paraver"
+
+
+
+
+
+
+
+
+
+
+
+PAPI_TOT_INS,PAPI_TOT_CYC,PAPI_L1_DCM,PAPI_L2_DCM,PAPI_L3_TCM,PAPI_BR_INS,PAPI_BR_MSP,RESOURCE_STALLS
+
+PAPI_TOT_INS,PAPI_TOT_CYC,PAPI_VEC_SP,PAPI_SR_INS,PAPI_LD_INS,PAPI_FP_INS
+PAPI_TOT_CYC</sampling>
+
+
+
+
+
+
+
+TRACE</trace-prefix>
+5</size>
+/scratch</temporal-directory>
+/gpfs/scratch/bsc41/bsc41273</final-directory>
+
+
+5000000</size>
+
+
+
+/gpfs/scratch/bsc41/bsc41273/control</file>
+</global-ops>
+
+
+10M</minimum-time>
+    <finalize-on-signal enabled="yes" 
+      SIGUSR1="no" SIGUSR2="no" SIGINT="yes"
+      SIGQUIT="yes" SIGTERM="yes" SIGXCPU="yes"
+      SIGFPE="yes" SIGSEGV="yes" SIGABRT="yes"
+
+
+
+
+
+
+<merge enabled="yes" 
+    synchronization="default"
+    tree-fan-out="16"
+    max-memory="512"
+    joint-states="yes"
+    keep-mpits="yes"
+    sort-addresses="yes"
+    overwrite="yes"
+
+#+end_example
